# App_RAG_OpenAI

./: .gitignore  RAG_openai.ipynb  README.md  app.py  pyproject.toml
.ipynb_checkpoints/: main_notebook-checkpoint.ipynb
src/: styles.py
src/callbacks/: callbacks_gpt35.py
