[tool.poetry]
name = "projet-interne-llm"
version = "0.1.0"
description = ""
authors = ["iflogny <iflogny@synergy.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
markdownify = "^0.11.6"
llama-index = "^0.9.33"
docx2txt = "^0.8"
dash = "^2.14.2"
dash-bootstrap-components = "^1.5.0"
llama-cpp-python = "^0.2.35"
huggingface-hub = "^0.20.3"
sentence-transformers = "^2.3.0"
loguru = "^0.7.2"
chainlit = "^1.0.200"
wandb = "^0.16.2"
langchain = "^0.1.4"
langchain-community = "^0.0.16"
matplotlib = "^3.8.2"
bitsandbytes = "0.40.2"
accelerate = "0.21.0"
peft = "0.4.0"
trl = "0.4.7"
torch = "^2.2.0+cu118"
torchvision = "^0.17.0+cu118"
torchaudio = "^2.2.0+cu118"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "primary"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu/torch_stable.html"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

